# wispvm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vs.bat
compiler/: CMakeLists.txt  ast.h  ast_types.h  char.cpp  char.h  decl.h  lexer.cpp  lexer.h  parser.cpp  parser.h  scanner.cpp  scanner.h  statement.h  token.cpp  token.h
examples/: hello_world.wisp
shared/: decoder.h  platform.h  random.h  types.h
shared/hash/: crc32.h
unit_test/: CMakeLists.txt  main.cpp
unit_test/compiler/: lexer_tests.cpp  scanner_tests.cpp  tokenizer_tests.cpp
unit_test/vm/: memory_permissions.cpp  simple_vm.cpp
unit_test/wisp/: bytecode_tests.cpp  complex_array_tests.cpp  complex_string_tests.cpp  int_value_type_tests.cpp  type_equality.cpp
vm/: CMakeLists.txt  context.h  instruction.cpp  instruction.h  isa.h  native.h  register.cpp  register.h  register_math.h  register_math_tables.h  stack.cpp  stack.h  state.cpp  state.h  value.h  vm.cpp  vm.h
vm/modules/: memory.cpp  memory.h
wisp/: CMakeLists.txt  bytecode.h  complex_value.cpp  complex_value.h  context.h  fp_value.cpp  fp_value.h  integer_value.cpp  integer_value.h  main.cpp  mm.h  native.h  program.cpp  program.h  register.cpp  register.h  register_math.h  string_formatter.cpp  string_formatter.h  value.cpp  value.h
wisp/isa/: array.cpp  array.h  compare.cpp  compare.h  control_flow.cpp  control_flow.h  encoding.cpp  encoding.h  integer_math.cpp  integer_math.h  isa.cpp  isa.h  load_store.cpp  load_store.h  memory.h  move.cpp  move.h  string.cpp  string.h  syscall.cpp  syscall.h
